:construction: Preparing for repository, minor refactorings

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,12 @@ android {
         dataBinding true
         viewBinding true
     }
+    testOptions{
+        unitTests{
+            returnDefaultValues = true
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
