:construction: Major refactoring for Repository -> ViewModel, Network and DB for Records model

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,15 +63,21 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
-    // testing
-    testImplementation "junit:junit:4.13.2"
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
-    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    //mockwebserver
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.5.0'
 
+
+    // testing
+    def kotlinx_coroutines_version = "1.4.2"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlinx_coroutines_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$kotlinx_coroutines_version"
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+
     //moshi
-    implementation "com.squareup.moshi:moshi:1.8.0"
-    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+    def moshi_version = "1.8.0"
+    implementation "com.squareup.moshi:moshi:$moshi_version"
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
     // espresso
     def espresso_version = "3.3.0"
