--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkoput@v2
+      - uses: actions/checkout@v2
 
       - name: Set Up SDK
         uses: actions/setup-java@v1
