--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,13 @@ dependencies {
     implementation "com.google.android.material:material:1.3.0"
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:1.4.30"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // navigation
+    def nav_version = "2.3.3"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // lifecycle (livedata-viewmodel)
     def lifecycle_version = "2.3.0"
