--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,9 @@ dependencies {
     implementation "com.google.android.material:material:1.3.0"
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    //noinspection GradleDependency
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // navigation
